<resources>
    <string name="app_name">Popular Movies</string>
    <string name="error_msg">Please, reload the page.</string>
    <string name="movie_poster">movie_poster</string>
    <string name="button_fav">Mark as Favorite</string>

    <!--Menus-->
    <string name="most_popular">Most popular</string>
    <string name="top_rated">Top rated</string>
    <string name="favorites_db">Favorites</string>

    <!--json keys and urls-->
    <!--<string name="movie_db_url" translatable="false">https://api.themoviedb.org/3/movie/[SORTED]?api_key=[API_KEY]</string>-->
    <string name="movie_db_url" translatable="false">https://api.themoviedb.org/3/movie/[SORTED]?api_key=[API_KEY]</string>
    <string name="image_base_url" translatable="false">https://image.tmdb.org/t/p/w500</string>

    <string name="api_key" translatable="false">e9a4d258ab2f1609f16bd29d0eef3719</string>
    <string name="popular_key" translatable="false">popular</string>
    <string name="top_rated_key" translatable="false">top_rated</string>
    <string name="movie_parsing_key" translatable="false">movie</string>
    <string name="video_parsing_key" translatable="false">video</string>
    <string name="json_key" translatable="false">results</string>

    <string name="posterPath_key">poster_path</string>
    <string name="title_key">title</string>
    <string name="release_date_key">release_date</string>
    <string name="vote_average_key">vote_average</string>
    <string name="overview_key">overview</string>

    <!--helpers-->
    <string name="popular_label" translatable="false">Popular </string>
    <string name="top_rated_label" translatable="false">Top rated </string>
    <string name="selected" translatable="false"> selected </string>
    <string name="from_10" translatable="false"> %s/10</string>
    <string name="sorted_target" translatable="false">[SORTED]</string>
    <string name="api_key_target" translatable="false">[API_KEY]</string>
    <!--<string name="key_label" translatable="false">?api_key=</string>-->


    <string name="image_view_description">Movie poster</string>
    <string name="overview_hint">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown
        printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="rating_hint">8.1/10</string>
    <string name="release_date_hint">2018 12 17</string>
    <string name="title_hint">Movie Title</string>
    <string name="trailer_title">Trailer title</string>
    <string name="reviews">Reviews</string>
    <string name="trailer_thumbnail">trailer thumbnail</string>
    <string name="trailers">Trailers:</string>
    <string name="divider">divider</string>
    <string name="movie_db_base_url">https://api.themoviedb.org/3/movie/</string>
    <string name="api_label_and_key">/videos?api_key=e9a4d258ab2f1609f16bd29d0eef3719</string>
    <string name="api_label_review__key">/reviews?api_key=e9a4d258ab2f1609f16bd29d0eef3719</string>
    <string name="play_pic">play_pic</string>
    <string name="read_more">Read more</string>
    <string name="pref_sort_key">sort_order</string>

</resources>
