<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DetailActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/movieTitle"
                android:layout_width="match_parent"
                android:layout_height="92dp"
                android:background="#009688"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/sixteen_dp"
                android:paddingLeft="@dimen/sixteen_dp"
                android:paddingRight="@dimen/sixteen_dp"
                android:text=""
                android:textColor="#fff"
                android:textSize="35sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/title_hint" />

            <ImageView
                android:id="@+id/moviePosterDetail"
                android:layout_width="175dp"
                android:layout_height="267dp"
                android:layout_marginStart="@dimen/sixteen_dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/eight_dp"
                android:contentDescription="@string/movie_poster"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movieTitle" />

            <TextView
                android:id="@+id/movieReleaseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="@dimen/sixteen_dp"
                android:layout_marginEnd="@dimen/thirty_six_dp"
                android:text=""
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/moviePosterDetail"
                app:layout_constraintTop_toBottomOf="@+id/movieTitle"
                tools:text="@string/release_date_hint" />

            <TextView
                android:id="@+id/movieRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="@dimen/one_twenty_dp"
                android:text=""
                android:textColor="#000"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/movieReleaseDate"
                app:layout_constraintTop_toBottomOf="@+id/movieReleaseDate"
                tools:text="@string/rating_hint" />

            <Button
                android:id="@+id/favBtn"
                style="@style/Button"
                android:layout_width="99dp"
                android:layout_height="@dimen/forty_dp"
                android:layout_marginTop="24dp"
                android:text="@string/button_fav"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/movieRating"
                app:layout_constraintTop_toBottomOf="@+id/movieRating" />

            <TextView
                android:id="@+id/movieOverview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/sixteen_dp"
                android:text=""
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/moviePosterDetail"
                tools:text="@string/overview_hint" />

            <!--<include-->
            <!--android:id="@+id/include_id"-->
            <!--layout="@layout/trailer_list"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:visibility="visible"-->
            <!--app:layout_constraintEnd_toEndOf="parent"-->
            <!--app:layout_constraintHorizontal_bias="1.0"-->
            <!--app:layout_constraintStart_toStartOf="parent"-->
            <!--app:layout_constraintTop_toBottomOf="@+id/movieOverview" />-->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movieOverview">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/trailerRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    tools:listitem="@layout/trailer_item" />
            </FrameLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>